<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /******************************************************************************
  ~   Copyright (C) 2019 Alexander Uchitel.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  ******************************************************************************/
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBottomPanel"
    tools:context=".FragmentSender">

    <Button
        android:id="@+id/view_btn"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="From View"
        app:layout_constraintBottom_toTopOf="@id/fragment_btn"
        app:layout_constraintEnd_toStartOf="@+id/viewgroup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewgroup_btn"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="From ViewGroup"
        app:layout_constraintBottom_toTopOf="@+id/activity_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_btn"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="From Fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_btn" />

    <Button
        android:id="@+id/activity_btn"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="From Activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_btn"
        app:layout_constraintTop_toBottomOf="@+id/viewgroup_btn" />

</android.support.constraint.ConstraintLayout>
