...
    style="@style/orientation1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame1"
        style="@style/container1" />

    <LinearLayout
        style="@style/container2"
        android:background="@color/colorTopPanel"
        android:orientation="vertical">
...
